<resources>
    <string name="app_name">Da Silva</string>
    <string name="location_name">Da Silva</string>
    <string name="location_type">Club.Bar.Lounge</string>
    <string name="facebook_app_id">504302586404216</string>
    <string name="development_hash_key">VvYXiBNnf82RV/4vdk1NxET1Vjo</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_program">Programm</string>
    <string name="title_section_gallery">Galerie</string>
    <string name="title_section_location">Location</string>
    <string name="title_section_reservation">Reservierung</string>
    <string name="title_section_drink_of_the_month">Drink des Monats</string>
    <string name="title_section_regular_guest">Stammgast</string>
    <string name="title_section_news">News</string>
    <string name="title_section_image_fullscreen">Vollbild</string>
    <string name="title_section_gallery_detail">Detailgalerie</string>
    <string-array name="section_icons">
        <item>@drawable/icon_home</item>
        <item>@drawable/icon_program</item>
        <item>@drawable/icon_gallery</item>
        <item>@drawable/icon_location</item>
        <item>@drawable/icon_mail</item>
        <item>@drawable/icon_drink</item>
        <item>@drawable/icon_regular_guest</item>
        <item>@drawable/icon_news</item>
    </string-array>
    <string-array name="sections">
        <item>\tHome</item>
        <item>\tProgramm</item>
        <item>\tGalerie</item>
        <item>\tLocation</item>
        <item>\tReservierung</item>
        <item>\tDrink des Monats</item>
        <item>\tStammgast</item>
        <item>\tNews</item>
    </string-array>
    <string name="event_day_today">Heute</string>
    <string name="event_day_tomorrow">Morgen</string>
    <string name="event_day_day_after_tomorrow">Übermorgen</string>
    <string name="event_day_x">In X Tagen</string>
    <string name="event_title">Eventname</string>
    <string name="event_tuesday">Pong or Pay</string>
    <string name="event_thursday">Studenten.Pack</string>
    <string name="event_friday">I Like&#8230;</string>
    <string name="event_saturday">Club.Classix</string>
    <string name="today">Heute</string>
    <string name="weekday_today">Montag</string>
    <string name="date_today">1.1.2000</string>
    <string name="event_status_closed">Geschlossen</string>
    <string name="event_status_open">Offen</string>
    <string name="event_status_open_in">Geöffnet in </string>
    <string name="event_status_unit"> Stunden</string>
    <string name="weekday_monday">Montag</string>
    <string name="weekday_tuesday">Dienstag</string>
    <string name="weekday_wednesday">Mittwoch</string>
    <string name="weekday_thursday">Donnerstag</string>
    <string name="weekday_friday">Freitag</string>
    <string name="weekday_saturday">Samstag</string>
    <string name="weekday_sunday">Sonntag</string>
    <string name="flyer_next_event_content_description">Flyer des nächsten Events</string>
    <string name="location_picture_content_description">Bild der Location</string>
    <string name="last_event_content_description">Flyer des letzten Events</string>
    <string name="next_event_content_description">Flyer des nächsten Events</string>
    <string name="is_valid_content_description">Zeigt an ob Inhalt erlaubt ist</string>
    <string name="gallery_detail_image_content_descripion">Bild der Gallerie in Vollbildansicht</string>
    <string name="gallery_item_image_content_descripion">Bild der Gallerie</string>
    <string name="news_feed_image_content_description">Bild des Newsfeeds</string>
    <string name="logo_news_content_description">Logo des Da Silva</string>
    <string name="view_pager_image_content_description">Bild des ViewPagers</string>
    <string name="opening_times_weekdays">Di, Do, Fr, Sa, vor Feiertagen</string>
    <string name="opening_times_hours">21 – 2 Uhr</string>
    <string name="opening_time">21</string>
    <string name="closing_time">2</string>
    <string name="opening_duration">5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="event_description_tuesday">Pong or Pay!\n Throw ball into cup and drink for free!\n Neues Beerpong Event dienstags im Da Silva! \n Außerdem Specials für Sportler!</string>
    <string name="event_description_thursday">Studenten.Pack\n Mit Trink 2 Zahl 1 bei Shots und Bier sparst du 50%\n Außerdem alle Longdrinks für nur 3,50€\n Jeden Donnerstag im Da Silva!</string>
    <string name="event_description_friday">I Like&#8230;\n &#8230;Cocktails, I Like Da Silva!\n Jeden Freitag bei uns Cocktails für 4,90€\n I Like Fridays! </string>
    <string name="event_description_saturday">#Weekend\n #Revel\n #Drink\n Feiert das Wochenende jeden Samstag im Da Silva! </string>
    <string name="default_news_feed_story">Das ist ein Beispieltext für einen Newsfeed-Eintrag.\n Dieser ist mit Absicht etwas länger.</string>
    <string name="default_news_feed_message">Das ist ein Beispieltext für einen Newsfeed-Eintrag.\n Dieser ist mit Absicht etwas länger.</string>
    <string name="default_news_feed_time">vor X Stunden</string>
    <string name="default_news_link">Zum Facebook-Post</string>
    <string name="news_feed_time_stamp_ago">Vor</string>
    <string name="news_feed_time_stamp_last_year">Letztes Jahr</string>
    <string name="news_feed_time_stamp_unit_years">Jahren</string>
    <string name="news_feed_time_stamp_last_month">Letzter Monat</string>
    <string name="news_feed_time_stamp_unit_months">Monaten</string>
    <string name="news_feed_time_stamp_last_week">Letzte Woche</string>
    <string name="news_feed_time_stamp_unit_weeks">Wochen</string>
    <string name="news_feed_time_stamp_last_day">Gestern</string>
    <string name="news_feed_time_stamp_unit_days">Tagen</string>
    <string name="news_feed_time_stamp_this_hour">Gerade eben</string>
    <string name="news_feed_time_stamp_last_hour">Vor 1 Stunde</string>
    <string name="news_feed_time_stamp_unit_hours">Stunden</string>
    <string name="indicator_location_image">1</string>
    <string name="number_of_location_images">4</string>
    <string name="slash">/</string>
    <string name="name_of_drink">Name des Drinks</string>
    <string name="ingredients">Zutaten</string>
    <string name="drink_image_content_description">Image of drink</string>
    <string name="description_of_drink">Beschreibung\n des\n Drinks</string>
    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="juli">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>
    <string name="drink_name_january">Mr.Ape‘s.Bellini</string>
    <string name="drink_name_february">Wodka.Sweet.Sour</string>
    <string name="drink_name_march">Pataya.Sling</string>
    <string name="enter_da_silva">Da Silva betreten</string>
    <string name="leave_da_silva">Da Silva verlassen</string>
    <string name="number_of_visits">Anzahl von Besuchen</string>
    <string name="zero">0</string>
    <string name="available_vouchers">Verfügbarer Gutschein</string>
    <string name="impressum">DA SILVA \n Bar . Lounge . Club \n Obermünsterstr. 9 \n 93047 Regensburg \n Email: info@dasilva-regensburg.de \n Betriebsleitung: \n Matthias Hamm \n Email: m.hamm@dasilva-regensburg.de \n Impressum \n Vitaiolo GmbH und Co. KG \n Weizenweg 2 / Sarchinger Feld \n 93092 Barbing / Regenbburg \n Email: office@dasilva-regensburg.de \n Geschäftsführer: \n Adrian J. Golba und Daniel Forster \n Tel.: 09401 5282524 \n Registereintrag: \n Eintragung im Handelsregister. \n Registergericht:Amtsgericht Regensburg \n Registernummer: HRB 10236 \n Umsatzsteuer-ID gemäß §27 a Umsatzsteuergesetz: DE249825095 \n Quellenangaben für die verwendeten Bilder: \n Galeriefotos: \n Daniel Pielmeier \n Webseite: \n Daniel Pielmeier IT-Consulting . Computer, Internet und So. \n T: +49 171 / 5239362 \n Haftungsausschluss: \n Haftung für Inhalte \n Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="drinks_fragment_headline">Getränkepreise</string>
    <string name="section_beer">Biere</string>
    <string name="beers"> Bischofshof Bruckmandl \nBeck`s \nBeck`s Gold \nBeck`s Lemon \nBeck`s Alkoholfrei \nFranziskaner Weiße \nFranziskaner leichte Weiße \nDesperados \nDesperados red</string>
    <string name="beer_prices">3,00\n3,00\n3,00\n3,00\n3,00\n3,50\n3,50\n4,00\n4,00</string>
    <string name="section_longdrink">Longdrinks</string>
    <string name="longdrinks">Prosecco RedBull \nWodka RedBull \nJägermeister RedBull \nWokda Lemon \nJack Daniel`s Cola \nBacardi Razz 7up \nGin Tonic</string>
    <string name="longdrink_prices">5,50\n6,50\n7,00\n6,50\n7,00\n6,50\n6,50</string>
    <string name="section_cocktail">Cocktails</string>
    <string name="cocktails">Solero \nTouch Down \nSex on the Beach \nAperol Schumann`s \nCaipirinha \nCuba Libre \nMojito \nRazz Mojito \nHugo \nAperol Sprizz \n Lillet Wild Berry</string>
    <string name="cocktail_prices">6,50\n6,50\n6,50\n6,50\n6,50\n6,50\n7,50\n7,50\n5,00\n5,00</string>
    <string name="section_non_alcoholic_cocktail">Alkoholfreie \nCocktails</string>
    <string name="non_alcoholic_cocktails">Fruit Punch \nVirgin Caipirinha </string>
    <string name="non_alcoholic_cocktail_prices">5,00 \n5,00</string>
    <string name="section_shot">Shots</string>
    <string name="shots">Jägermeister \nRamazotti \nRamazotti Menta \nSambuca \nErdbeerlimes \nTequila \nFicken \nWeihwasser \nMartini \nBaileys</string>
    <string name="shot_prices">2,50\n2,50\n2,50\n2,50\n2,50\n2,50\n2,50\n3,00\n4,00\n4,00</string>
    <string name="section_wine">Weine und \nSchaumweine</string>
    <string name="wines">Hauswein weiß/rot \nFlasche Hauswein weiß/rot \nWeinschorle \nFrizzante brut \nFrizzante brut auf Eis \nFlasche Frizzante brut \nFlasche Veuve Clicquot Brut</string>
    <string name="wine_prices">5,00\n18,00\n4,00\n2,50\n4,50\n18,00\n70,00</string>
    <string name="section_soft_drinks">Softdrinks</string>
    <string name="softdrinks">Wasser still/spritzig \nApfelschorle \nRedBull \nRedBull sugarfree \nRedBull silver \nRedBull red \nRedBull blue \nRedBull Cola\n Pepsi \nPepsi light \n7up \nSchwipSchwap \nOrangina \nTonic Water \nBitter Lemon \nGinger Ale \nWild Berries</string>
    <string name="softdrink_prices">2,00\n3,00\n3,50\n3,50\n3,50\n3,50\n3,50\n3,50\n2,50\n2,50\n2,50\n2,50\n3,00\n3,00\n3,00\n3,00\n3,00</string>
    <string name="section_bottles">Flaschen</string>
    <string name="bottles">Weihwasser Wodka \nAbsolut Wodka \nGreyGoose Wodka \nWeihwasser Gin \nBombay Gin \nJack Daniel`s \nJägermeister</string>
    <string name="bottle_prices">60,00\n70,00\n90,00\n70,00\n85,00\n85,00\n85,00</string>
</resources>