<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_v1"
    android:backgroundTintMode="src_over"
    tools:context=".Home$PlaceholderFragment">

    <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
        android:id="@+id/location_name_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/location_name"
        style="@style/headline"/>

    <mi.ur.de.dasilvaapp.DaSilvaAppContentTextView
        android:id="@+id/location_type_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_name_drinks"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/location_type"
        style="@style/subhead"/>
    <mi.ur.de.dasilvaapp.DaSilvaAppContentTextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_type_drinks"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/drinks_fragment_headline"
        style="@style/sub_subhead"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp">
    <TableLayout
        android:id="@+id/list_of_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:weightSum="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_beer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_beer"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/beers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/beers"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/beer_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/beer_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_wine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_wine"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/wines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/wines"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/wine_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/wine_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
            android:id="@+id/section_cocktail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:text="@string/section_cocktail"
            style="@style/subhead"
            android:layout_weight="0.3" />
        <TextView
            android:id="@+id/cocktails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cocktails"
            style="@style/body"
            android:layout_weight="0.5"
            />
        <TextView
            android:id="@+id/cocktail_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:text="@string/cocktail_prices"
            style="@style/body"
            android:layout_weight="0.2"
            />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_non_alcoholic_cocktail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_non_alcoholic_cocktail"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/non_alcholic_cocktail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/non_alcoholic_cocktails"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/non_alcoholic_cocktail_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/non_alcoholic_cocktail_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_longdrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_longdrink"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/longdrinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/longdrinks"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/longdrink_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/longdrink_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
            <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_shot"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/shots"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/shot_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/shot_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_soft_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_soft_drinks"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/soft_drinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/softdrinks"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/soft_drink_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/softdrink_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
                android:id="@+id/section_bottle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/section_bottles"
                style="@style/subhead"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/bottles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/bottles"
                style="@style/body"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/bottle_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:text="@string/bottle_prices"
                style="@style/body"
                android:layout_weight="0.2"
                />
        </TableRow>
    </TableLayout>
    </ScrollView>


</RelativeLayout>
