<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home$PlaceholderFragment">

    <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
        android:id="@+id/number_of_visits"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/number_of_visits" />

    <mi.ur.de.dasilvaapp.DaSilvaAppContentTextView
        android:id="@+id/actual_number_of_visits"
        style="@style/subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_of_visits"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/zero" />

    <mi.ur.de.dasilvaapp.DaSilvaAppContentTextView
        android:id="@+id/available_voucher"
        style="@style/subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actual_number_of_visits"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/available_vouchers" />

    <ImageView
        android:id="@+id/view_available_voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enter_button"
        android:layout_below="@+id/available_voucher"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:contentDescription="@string/flyer_next_event_content_description"
        android:src="@drawable/gutschein_freischalten" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/enter_da_silva" />

    <Button
        android:id="@+id/leave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/leave_da_silva" />

</RelativeLayout>
