<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home$PlaceholderFragment">

    <mi.ur.de.dasilvaapp.DaSilvaAppTitleTextView
        android:id="@+id/drink_name_headline"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/name_of_drink" />

    <TextView
        android:id="@+id/actual_month"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drink_name_headline"
        android:layout_centerHorizontal="true"
        android:text="@string/january" />

    <TextView
        android:id="@+id/ingredients"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actual_month"
        android:layout_centerHorizontal="true"
        android:text="@string/ingredients" />

    <ImageView
        android:id="@+id/drink_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_below="@+id/ingredients"
        android:contentDescription="@string/drink_image_content_description"
        android:src="@drawable/dienstag_neu" />

    <TextView
        android:id="@+id/description"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/description_of_drink" />

</RelativeLayout>
