<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_v1"
    tools:context=".Home$PlaceholderFragment"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/next_event_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:text="@string/event_day_today" />

    <ImageView
        android:id="@+id/flyer_next_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weekday_today"
        android:layout_below="@+id/next_event_day"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:contentDescription="@string/flyer_next_event_content_description"
        android:src="@drawable/dienstag" />

    <TextView
        android:id="@+id/event_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:text="@string/event_status_closed"
        android:paddingStart="30dp"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/event_status"
        android:layout_toLeftOf="@id/weekday_today"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/today" />

    <TextView
        android:id="@+id/weekday_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/event_status"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/weekday_today" />

    <TextView
        android:id="@+id/date_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/event_status"
        android:layout_toRightOf="@+id/weekday_today"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/date_today" />


</RelativeLayout>
