<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v1"
    android:nestedScrollingEnabled="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home$PlaceholderFragment">

    <mi.ur.de.dasilvaapp.TextViews.DaSilvaAppTitleTextView
        android:id="@+id/location_name_impressum"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/location_name" />

    <mi.ur.de.dasilvaapp.TextViews.DaSilvaAppContentTextView
        android:id="@+id/location_type_impressum"
        style="@style/subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_name_impressum"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/location_type" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_type_impressum"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/impressum"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impressum" />
    </ScrollView>


</RelativeLayout>
